--- a/index.html
+++ b/index.html
@@ -107,7 +107,9 @@
 				</section>
 
 				<section>
-					<video></video>
+					<video controls>
+						<source src="./data/Shaza’s Story.mp4" type="video/mp4">
+					</video>
 				</section>
 
 				<section>
