the almost final ppt is ready!!
Signed-off-by: Chinmay Chandak, @CCAtAlvis

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>reveal.js</title>
+		<title>SIESGST Hacktoberfest | made with reveal.js</title>
 
 		<link rel="stylesheet" href="css/reveal.css">
 		<link rel="stylesheet" href="css/theme/black.css">
@@ -28,13 +28,21 @@
 	img {
 		border: 0 !important;
 	}
+	h2, h3 {
+		text-transform: capitalize !important;
+		/* color: #21FFFF !important; */
+	}
+	img {
+		background: transparent !important;
+		box-shadow: none !important;
+	}
 </style>
 	</head>
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>What is Open Source?</section>
-				<section>What is Hacktoberfest?</section>
+				<section><h2>What is Open Source?</h2></section>
+				<section><h2>What is Hacktoberfest?</h2></section>
 				
 				<!-- <section data-transition="fade-out">Git..</section>
 				<section data-transition="fade-in fade-out">and GitHub</section> -->
@@ -42,12 +50,12 @@
 				<!-- TOPIC #1 -->
 				<section>
 					<video controls>
-						<source src="./data/Building the Future.mp4" type="video/mp4">
+						<source src="./data/social_impact/Building the Future.mp4" type="video/mp4">
 					</video>
 				</section>
 
 				<section>
-					<img src="./data/stephen-hawking.jpg">
+					<img src="./data/social_impact/stephen-hawking.jpg">
 				</section>
 
 				<section>
@@ -57,12 +65,12 @@
 				</section>
 
 				<section>
-					<img src="./data/intel.png"><br>
+					<img src="./data/social_impact/intel.png"><br>
 					<a href="https://github.com/intel/acat">intel/acat</a>
 				</section>
 
 				<section>
-						<img src="./data/stethoscope.png">
+						<img src="./data/social_impact/stethoscope.png">
 				</section>
 
 				<section>
@@ -72,7 +80,7 @@
 				</section>
 	
 				<section>
-						<img src="./data/gliax.png"><br>
+						<img src="./data/social_impact/gliax.png"><br>
 						<a href="https://github.com/GliaX/Stethoscope">GliaX/Stethoscope</a>
 				</section>
 
@@ -95,11 +103,14 @@
 
 				<!-- TOPIC #2 -->
 				<section>
-					Technologies
+					<h2>Technologies</h2>
 				</section>
 
 				<section>
-					<img>
+					<img src="./data/technologies/ai.jpeg" width="300">
+					<img src="./data/technologies/openstack.png" width="400">
+					<img src="./data/technologies/iot.jpg" width="300">
+					<img src="./data/technologies/r.png" width="300">
 				</section>
 
 				<section>
@@ -108,47 +119,147 @@
 				</section>
 
 				<section>
-					<img>
+					<img src="./data/technologies/tensorflow.png" width="550">
 				</section>
 
 				<section>
-					Tensorflow
+					Platforms<br>
+					<img src="./data/technologies/tflite-1.jpg">
+					<img src="./data/technologies/tfJs-1.png"><br>
 				</section>
 
 				<section>
 					<video controls>
-						<source src="./data/Shaza’s Story.mp4" type="video/mp4">
+						<source src="./data/technologies/Shaza’s Story.mp4" type="video/mp4">
 					</video>
 				</section>
 
 				<section>
-					<img>
+					<img src="./data/technologies/tf.png"> <br>
+					<a href="https://github.com/tensorflow/tensorflow">tensorflow/tensorflow</a>
 				</section>
 
 				<section>
-					<img src="./data/tensorflow.png">
-					<br>
-					<a href="https://github.com/tensorflow/tensorflow">tensorflow/tensorflow</a>
+					<img src="./data/technologies/cucumbersorter.png" width="750">
 				</section>
 
 				<section>
 					<a href="https://github.com/MuhammedBuyukkinaci/Fruit-Detector">MuhammedBuyukkinaci/Fruit-Detector</a>
 				</section>
 
+				<section>
+					PyTorch<br>
+					<img src="./data/technologies/pytorch.png"><br><br>
+
+					CNTK<br>
+					<img src="./data/technologies/cntk_logo.png" width="200">
+				</section>
+
+				<section>
+					<h3>Google Experiments</h3>
+				</section>
+				<section>
+					<video controls>
+						<source src="./data/technologies/A.I. Experiments Making it easier for anyone to explore A.I.mp4">
+					</video>
+				</section>
+
 				<!-- TOPIC #3 -->
 				<section>
-					<h1>AOSP</h1>
+					<video autoplay loop>
+						<source src="./data/aosp/1.mp4">
+					</video>
 				</section>
 
 				<section>
-					Noteworthy Contributions
+					<h3>Am I Open Source?</h3>
 				</section>
 
 				<section>
-					RRO | OMS
+					<img src="./data/aosp/2.jpg">
 				</section>
 
+				<section>
+					Changing the System Fonts <br>
+					<img src="./data/aosp/3.png" width="550">
+				</section>
 
+				<section>
+					Theming your Device<br>
+					<small>Make an Android truly yours</small><br>
+					<img src="./data/aosp/4.png" width="750">
+				</section>
+
+				<section>
+					Custom ROMs<br>
+					<small>Where it all started</small><br>
+					<img src="./data/aosp/5.png" width="750">
+				</section>
+
+				<section>				
+					CyanogenMod 7<br>
+					<img src="./data/aosp/6.jpg" width="750">
+				</section>
+
+				<section>
+					LineageOS 16.0<br>
+					<img src="./data/aosp/7.png" width="750">
+				</section>
+
+				<section>
+					RRO | OMS<br>
+					<small>A strong foundation of Android Theming</small><br>
+					<img src="./data/aosp/8.png" width="750">
+				</section>
+
+				<section>
+					Ubuntu Touch<br>
+					<img src="./data/aosp/9.jpg" width="750">
+				</section>
+
+				<section>
+					Firefox OS (formerly Boot2Gecko)<br>
+					<img src="./data/aosp/10.jpg" width="750">
+				</section>
+
+				<section>
+					Sailfish OS<br>
+					<img src="./data/aosp/11.jpg" width="750">
+				</section>
+
+				<section>
+					KaiOS<br>
+					<img src="./data/aosp/12.png" width="750">
+				</section>
+
+				<section>
+					Android x86<br>
+					<img src="./data/aosp/androidx86_derivative.jpg" width="750">
+				</section>
+
+				<!-- the PR time -->
+				<section>
+					<h2>Git and GitHub</h2>
+				</section>
+
+				<section>
+					<video controls>
+						<source src="./data/What is GitHub.mp4">
+					</video>
+				</section>
+
+				<section>
+					<h3>What is a version control system ?</h3>
+					<p class="fragment" data-fragment-index="1">A system that keeps records of your changes</p>
+					<p class="fragment" data-fragment-index="2">Allows for collaborative development</p>
+				</section>
+
+				<section><h2>Git</h2></section>
+				<section><h3>Key Git concepts</h3></section>
+				<section><h3>Repositories</h3></section>
+				<section><h3>Commit</h3></section>
+				<section><h3>Clone, pull, push</h3></section>
+				<section><h2>The PR Time</h2></section>
 			</div>
 		</div>
 
