--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
+				<section data-background-image="./data/Hacktoberfest_2018_poster3_5334x3000.png"></section>
+
 				<section><h2>What is Open Source?</h2></section>
 				<section><h2>What is Hacktoberfest?</h2></section>
 				
@@ -116,6 +118,10 @@
 				<section>
 					<h1>AI</h1>
 					Artificial Intelligence
+				</section>
+
+				<section>
+					<img src="./data/technologies/googleProducts.jpeg">
 				</section>
 
 				<section>
